2005-03-13  Sven Neumann  <sven@gimp.org>

	* app/dialogs/print-size-dialog.c (print_size_dialog_response):
	handle the resolution unit correctly, fixes bug #170200.

2005-03-13  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/drawable_transform.pdb
	(drawable_transform_scale)
	(drawable_transform_scale_default): applied fix from Theodor de
	Ment which fixes a wrong precondition check which made certain
	scale operations impossible. Fixes bug #170195.

	* tools/pdbgen/pdb/transform_tools.pdb (scale): fixed the same
	copy & paste bug here.

	* app/pdb/drawable_transform_cmds.c
	* app/pdb/transform_tools_cmds.c: regenerated.

2005-03-12  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/common/winclipboard.c: applied a patch from 
	Sven Neumann that removes the paste functionality from the
	plug-in. Since GTK+ 2.6.x, this isn't needed anymore. 
	Fixes bug #168488.  

2005-03-12  Sven Neumann  <sven@gimp.org>

	* app/base/hue-saturation.[ch]
	* app/tools/gimphuesaturationtool.[ch]: applied a patch from Joao
	S. O. Bueno Calligaris and modified it a little. This adds a way
	to control the overlap between hue ranges in the Hue Saturation
	tool (bug #166628).

2005-03-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/despeckle.c: test intensity against white and
	black level, not only the red channel. Improved border behavior.
	Iterate over the pixels row-by-row, instead of jumping through the
	data column-wise.

2005-03-11  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpstrokedesc.h
	* app/core/gimpstrokedesc.c (gimp_stroke_desc_duplicate):
	New function, will be needed for shape layers.
	
2005-03-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/deinterlace.c
	* plug-ins/common/despeckle.c
	* plug-ins/common/laplace.c
	* plug-ins/common/neon.c
	* plug-ins/common/sobel.c
	* plug-ins/common/dog.c: update progress less frequently.

2005-03-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/despeckle.c: minor cleanup, inline