@@ -1,3 +1,11 @@
+2005-03-13  Manish Singh  <yosh@gimp.org>
+
+	* app/composite/gimp-composite-altivec.[ch]: More accelerated functions
+	from Frederic Leroy.
+
+	* app/composite/gimp-composite-altivec-installer.c
+	* app/composite/gimp-composite-altivec-test.c: regenerated.
+
 2005-03-13  Sven Neumann  <sven@gimp.org>
 
 	* app/dialogs/print-size-dialog.c (print_size_dialog_response):
